testing Gaurav's bytecode utilities PR